--- a/常用正则.md
+++ b/常用正则.md
@@ -6,7 +6,7 @@
 
 ### 搜索C++类的派生
 ```
-(?<!:):[\s]*(public[\s]+)?([\w]*::)?Base
+[^:]:[\s]*(public[\s]+)?([\w]+::)?Base[^a-zA-Z]
 ```
 
 ### 搜索函数被调用的地方
