--- a/常用正则.md
+++ b/常用正则.md
@@ -2,32 +2,25 @@
 
 本文收集一些开发过程中常用于搜索的正则表达式
 
-## 搜索类
+## C++相关
 
-### 搜索C++类的派生
+### 搜索类的派生
 ```
 [^:]:[\s]*(public[\s]+)?([\w]+::)?Base[^a-zA-Z]
 ```
+
+说明：匹配继承自Base类的派生类声明
+示例：
+- `class Derived : public Base {` ✓
+- `class Derived : Base {` ✓
+- `class Derived : namespace::Base {` ✓
 
 ### 搜索函数被调用的地方
 ```
 (\.|->)[\s]*CallFunction
 ```
 
-### 搜索Lua全局表被赋值的地方
-```
-(?<!<pre\s)(?<!<div\s)(?<!<span\s)(?<!local\s)(?<!\{)(?<!\w)(?<!\.)class[\s]*=
-```
-
-
-```
-^(_G\.)?class[\s]*=
-```
-
-
-## 替换类
-
-### 为调用成员函数的地方加上判空
+### 成员函数调用添加判空（替换）
 搜索：
 ```
 (!?)([\w]+)([\s]*)(->)([\s]*)(CallFunc\(\))
@@ -36,3 +29,27 @@
 ```
 ($2 && $1$2$3$4$5$6)
 ```
+
+注意：这个替换可能需要根据具体情况调整，比如：
+- 已有的判空检查
+- 多层调用链的情况
+
+## Lua相关
+
+### 搜索类函数调用
+```
+(UGCGetInst\("ResourceDataMgr"\)|_dataMgr)[\s]*:[\s]*[\w]+\(
+(UGCGetInst\("ResourceDataMgr"\)|_dataMgr)[\s]*:[\s]*(LoadModelData)\(
+```
+
+### 搜索全局表被赋值的地方
+```
+(?<!<pre\s)(?<!<div\s)(?<!<span\s)(?<!local\s)(?<!\{)(?<!\w)(?<!\.)class[\s]*=
+^(_G\.)?class[\s]*=
+```
+
+### 搜索配置
+```
+(?<!\w)Type[\s]*=[\s]*'(?!Line)(?!Slider)(?!Switch)(?!Selection)(?!Option)
+```
+
